--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <h1>A-Star<sub>Time</sub></h1>
-    <p>A-Star with collision avoidance. Walkers calculate their paths by including future positions of other walkers in their considerations, effectively avoiding collisions upon path search. A colission is defined by two or more dots being on the same cell on the grid at the same time.</p>
+    <p>A-Star with collision avoidance. Walkers calculate their paths by including future positions of other walkers in their considerations, effectively avoiding collisions upon path search. A collision is defined by two or more dots being on the same cell on the grid at the same time.</p>
     <p>
       Random seed: <input id="seed"/>
       <button id="startButton">Start</button>
